web-infras/parser/tests/fixtures/babel/es2015/uncategorised/236/output.txt
[SyntaxError]: 'for-of' loop variable declaration may not have an initializer. (1,14)
1|for (let x = 42 of list) process(x);
 |            ^
